# django-keyvalue

./: .env  README.md  doc_comparex.json  pdf2image.py
docTransformer/: .gitignore  .gitignore.swo  1  @  Dockerfile  api.js  db.sqlite3  docker-compose.yml  final_output.docx  generated_file_17 (9).docx  generated_temp.docx  manage.py  metadata.json  pyproject.toml  quickstart.py  temp_output.docx  ts.json  ts1.json  ts3.json  ~$mp_output.docx  완성.docx  완성2.docx
docTransformer/DocGenerator/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
docTransformer/DocGenerator/migrations/: 0001_initial.py  0002_rules.py
docTransformer/DocGenerator/services/: generator.py  insert_xml_table.py  key_mapping.py
docTransformer/DocTransformer/: asgi.py  celery.py  settings.py  urls.py
docTransformer/TsExpert/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py  views_copy.py
docTransformer/TsExpert/migrations/: 0002_alter_keyvalue_key_values.py  0004_loan.py  0005_alter_loan_fee_alter_loan_interest_payment_period_and_more.py  0006_metadata.py  0007_remove_metadata_specific_and_more.py  0010_alter_metadata_type.py  0011_alter_metadata_type.py  (+18 more)
docTransformer/templates/: TsExpert.html  docGenerator.html  투자신청의견서템플릿v2.docx
docTransformer/tests/: camelot_test.py  table_1.csv  table_10.csv  table_11.csv  table_12.csv  table_13.csv  table_14.csv  table_15.csv  table_16.csv  table_17.csv  table_18.csv  table_19.csv  table_2.csv  table_20.csv  table_21.csv  table_22.csv  table_23.csv  table_24.csv  table_26.csv  table_27.csv  table_28.csv  table_29.csv  table_3.csv  table_30.csv  table_31.csv  table_32.csv  table_33.csv  table_34.csv  table_36.csv  table_37.csv  table_38.csv  table_39.csv  table_4.csv  table_41.csv  table_42.csv  table_43.csv  table_44.csv  table_45.csv  table_46.csv  table_47.csv  (+13 more)
(+35 files in other folders)
